# shapelib

./: .gitmodules  CMakeLists.txt  build.bat  build_amd64.cmake  build_x64.bat  build_x86.bat  build_x86.cmake  package.cmake
cmake/: build_amd64.cmake  build_common.cmake  build_x86.cmake
rogii/: build_common.cmake  package.cmake  split_debug_info.sh  version.cmake
